Fixing ul/li styles on mobile widths

--- a/app/app.scss
+++ b/app/app.scss
@@ -436,7 +436,16 @@ a.circleWhite {
 .sectionContent {
 	margin: 0 3%;
 }
+
 }
+
+
+@media (max-width: 700px) {
+.sectionTech ul {
+	padding: 10px;
+}
+}
+
 
 @media (max-width: 480px) {
 .header {
@@ -463,6 +472,20 @@ a.circleWhite {
 
 .content {
 	padding: 10px;
+}
+
+.sectionTech {
+	ul {
+		display: block;
+	}
+
+	ul:nth-of-type(1) {
+		padding-bottom: 0;	
+	}
+	
+	ul:nth-of-type(2) {
+		padding-top: 0;	
+	}
 }
 
 }
